--- a/views/registrar.html
+++ b/views/registrar.html
@@ -259,6 +259,7 @@
     <div id="warningModal" class="modal">
         <div class="modal-content">
             <h2>Favor de llenar todos los campos.</h2>
+            <input id="ok_modal"  class="btn btn-success btn-lg" type="button" name="ok_modal" value="Ok">
         </div>
     </div>
 
