--- a/styles/css/alumnoRegistro.css
+++ b/styles/css/alumnoRegistro.css
@@ -91,3 +91,11 @@ input, select {
   display: inline-block;
   margin-left: 25%;
 }
+
+.form-control::placeholder {
+  opacity: 0.6;
+}
+
+.form-control:focus::placeholder{
+  color: transparent;
+}
