--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -43,27 +43,28 @@ label{
    color: #FFF;
 }
 .modal{
-   display: none;
-   position: fixed;
-   z-index: 1;
-   left: 0;
-   top: 0;
-   width: 100%;
-   height: 100%;
-   overflow: auto;
-   background-color: rgba(0, 0, 0, 0.5);
-   animation-name: openModalBlock;
-   animation-duration: 1.5s;
+    display: none;
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation-name: openModalBlock;
+    animation-duration: 1s;
 }
 .modal-content{
-   background-color: #f4f4f4;
-   margin: 20% auto;
-   padding: 20px;
-   width: 40%;
-   height: 13%;
-   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
-   animation-name: openModalBlock;
-   animation-duration: 1.5s;
+    background-color: #f4f4f4;
+    margin: 20% auto;
+    padding: 20px;
+    width: 30%;
+    height: 15%;
+    text-align: center;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+    animation-name: openModalBlock;
+    animation-duration: 1.5s;
 }
 .closeBtn{
    color: #fff;
@@ -101,6 +102,11 @@ width: 100%;
 
 #infoGeo{
   display: none;
+}
+
+#ok_modal{
+  margin: auto;
+  width: 50%;
 }
 @keyframes openSection{
    from{
