--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -53,9 +53,10 @@ label{
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     animation-name: openModalBlock;
-    animation-duration: 1s;
+    animation-duration: 0.4s;
 }
 .modal-content{
+    border-radius: 20px;
     background-color: #f4f4f4;
     margin: 20% auto;
     padding: 20px;
@@ -64,7 +65,7 @@ label{
     text-align: center;
     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
     animation-name: openModalBlock;
-    animation-duration: 1.5s;
+    animation-duration: 0.7s;
 }
 .closeBtn{
    color: #fff;
