Estilizacion a validacion de form de registrar.html

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -61,7 +61,7 @@
                         <div class="form-group">
                             <label> SELECCIONE EL TIPO DE EVENTO DE INTERES: </label>
                             <select id="eventoSelector" class="form-control form-control-sm" name="tipo_evento">
-                            <option selected disabled hidden> SELECCIONE </option>
+                            <option selected disabled hidden value="0"> SELECCIONE </option>
                             <option value="1"> Vinculacion </option>
                             <option value="2"> Cientifica </option>
                             <option value="3"> Deportiva </option>
@@ -94,12 +94,12 @@
                           <div class="form-group">
                               <label> ESTADO: </label>
                               <br>
-                              <input type="text" class="form-control" id="estado_show"></input>
+                              <input type="text" class="form-control" id="estado"></input>
                           </div>
                           <div class="form-group">
                               <label> CIUDAD: </label>
                               <br>
-                              <input type="text" class="form-control" id="ciudad_show"></input>
+                              <input type="text" class="form-control" id="ciudad"></input>
                           </div>
                           <div style="height:5px;"></div>
                           <hr style="height: 10px;">
