--- a/views/registrar.html
+++ b/views/registrar.html
@@ -94,12 +94,12 @@
                           <div class="form-group">
                               <label> ESTADO: </label>
                               <br>
-                              <input type="text" class="form-control" id="estado"></input>
+                              <input type="text" class="form-control" id="estado_show"></input>
                           </div>
                           <div class="form-group">
                               <label> CIUDAD: </label>
                               <br>
-                              <input type="text" class="form-control" id="ciudad"></input>
+                              <input type="text" class="form-control" id="ciudad_show"></input>
                           </div>
                           <div style="height:5px;"></div>
                           <hr style="height: 10px;">
