Inclusion de formato de territorio extranjero en validacion estlizizada

--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -50,7 +50,7 @@
 
                             <div id="formNac" class="form-group">
                                 <label> SELECCIONE EL ESTADO: </label>
-                                <select class="form-control form-control-sm" name="estado" id="estado">
+                                <select class="form-control form-control-sm" name="estado" id="nac_estado">
                               <option selected disabled hidden value="0"> SELECCIONE </option>
                               <option value="DIF">Distrito Federal</option>
                               <option value="AGS">Aguascalientes</option>
@@ -87,11 +87,11 @@
                             </select>
                                 <br>
                                 <label>INGRESE LA CIUDAD: </label>
-                                <input type="text" class="form-control" placeholder="ej. Tijuana" name="ciudad" id="ciudad">
+                                <input type="text" class="form-control" placeholder="ej. Tijuana" name="ciudad" id="nac_ciudad">
                             </div>
                             <div id="formExt" class="form-group">
                                 <label>SELECCIONE EL PAIS: </label>
-                                <select class="form-control form-control-sm" name="pais">
+                                <select class="form-control form-control-sm" name="pais" id="ext_pais">
                               <option selected disabled hidden value="0"> SELECCIONE </option>
                               <option value="USA">Estados Unidos</option>
                               <option value="CAN">Canadá</option>
@@ -338,10 +338,10 @@
                             </select>
                                 <br>
                                 <label>INGRESE EL ESTADO: </label>
-                                <input type="text" class="form-control" placeholder="ej. California" name="estado_extranjera">
+                                <input type="text" class="form-control" placeholder="ej. California" name="estado_extranjera" id="ext_estado">
                                 <br>
                                 <label>INGRESE LA CIUDAD: </label>
-                                <input type="text" class="form-control" placeholder="ej. Anaheim" name="ciudad_extranjera">
+                                <input type="text" class="form-control" placeholder="ej. Anaheim" name="ciudad_extranjera" id="ext_ciudad">
                             </div>
                             <div style="height:5px;"></div>
                             <hr style="height: 10px;">
