--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -4,8 +4,8 @@ body{
 }
 #header-sae{
    background: #FFFFFFFF;
-   animation-name: openHeader;
-   animation-duration: 1.3s;
+   animation-name: slideHeader;
+   animation-duration: 1s;
    opacity: 0.95;
 }
 #entirePage {
@@ -18,6 +18,8 @@ body{
    padding-bottom: 20px;
    display: block;
    margin:0 auto;
+   animation-name: openSection;
+   animation-duration: 1s;
 }
 #buttons {
    background: rgba(60, 180, 180);
@@ -86,19 +88,19 @@ width: 100%;
    width: inherit;
 }
 #section_one{
-   display: block;
-   animation-name: openSection;
-   animation-duration: 1.5s;
+    display: block;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
 #section_two{
-   display: none;
-   animation-name: openSection;
-   animation-duration: 1.5s;
+    display: none;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
 #section_three{
-   display: none;
-   animation-name: openSection;
-   animation-duration: 1.5s;
+    display: none;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
 
 #infoGeo{
@@ -109,19 +111,40 @@ width: 100%;
   margin: auto;
   width: 50%;
 }
+
+
+
+
+@keyframes slideHeader{
+    from{
+       opacity: 0;
+      transform: translateY(2rem);
+   }
+    to {
+       opacity: 1;
+      transform: translateY(0);
+   };
+}
+
+
 @keyframes openSection{
+    from{
+       opacity: 0;
+        transform: translateY(2.5rem);
+   }
+    to {
+       opacity: 1;
+        transform: translateY(0);
+   }
+}
+
+
+
+@keyframes openModalBlock{
    from{
       opacity: 0
   }
    to {
       opacity: 1
-  }
-}
-@keyframes openHeader{
-   from{
-      opacity: 0
-  }
-   to {
-      opacity: 0.95
   }
 }
