--- a/styles/css/solicitud.css
+++ b/styles/css/solicitud.css
@@ -56,8 +56,8 @@
 }
  #header-sae{
      background: #FFFFFFFF;
-     animation-name: openHeader;
-     animation-duration: 1.3s;
+     animation-name: slideHeader;
+     animation-duration: 1s;
      opacity: 0.95;
 }
  #entirePage {
@@ -70,6 +70,8 @@
      padding-bottom: 20px;
      display: block;
      margin:0 auto;
+     animation-name: openSection;
+     animation-duration: 1s;
 }
  #buttons {
      background: rgba(60, 180, 180);
@@ -94,17 +96,17 @@
  #section_one{
      display: block;
      animation-name: openSection;
-     animation-duration: 1.5s;
+     animation-duration: 1s;
 }
  #section_two{
      display: none;
      animation-name: openSection;
-     animation-duration: 1.5s;
+     animation-duration: 1s;
 }
  #section_three{
      display: none;
      animation-name: openSection;
-     animation-duration: 1.5s;
+     animation-duration: 1s;
 }
  #formExt{
      display: none;
@@ -121,23 +123,30 @@
  */
 
 
- @keyframes openSection{
+ @keyframes slideHeader{
      from{
-        opacity: 0
+        opacity: 0;
+ 			 transform: translateY(2rem);
     }
      to {
-        opacity: 1
+        opacity: 1;
+ 			 transform: translateY(0);
+    };
+ }
+
+
+ @keyframes openSection{
+     from{
+        opacity: 0;
+         transform: translateY(2.5rem);
+    }
+     to {
+        opacity: 1;
+         transform: translateY(0);
     }
 }
 
- @keyframes openHeader{
-     from{
-        opacity: 0
-    }
-     to {
-        opacity: 0.95
-    }
-}
+
 
 @keyframes openModalBlock{
     from{
