--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -7,10 +7,27 @@
 		padding-top: 20px;
 		padding-bottom: 20px;
 		display: block;
-		margin:0 auto;
+		margin: auto;
 		animation-name: slideModalContent;
 		animation-duration: 1s;
 }
+
+#entirePopup {
+		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+		border-radius: 35px;
+		background: #F4F4F4FF;
+		height: auto;
+		width: auto;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		display: block;
+		margin: auto;
+		animation-name: slideModalContent;
+		animation-duration: 1s;
+		margin-top: 10rem;
+}
+
+
 
 .btn{
 		border-radius: 15px;
