--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -63,7 +63,7 @@ label{
     margin: 20% auto;
     padding: 20px;
     width: 30%;
-    height: 15%;
+    height: auto;
     text-align: center;
     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
     animation-name: openModalBlock;
