--- a/styles/css/registrar.css
+++ b/styles/css/registrar.css
@@ -1,119 +1,150 @@
 body{
-     background: url("../assets/img/solicitud-fondo.png");
-     background-size: 35% 40%;
+   background: url("../assets/img/solicitud-fondo.png");
+   background-size: 35% 40%;
 }
- #header-sae{
-     background: #FFFFFFFF;
-     animation-name: openHeader;
-     animation-duration: 1.3s;
-     opacity: 0.95;
+#header-sae{
+   background: #FFFFFFFF;
+   animation-name: slideHeader;
+   animation-duration: 1s;
+   opacity: 0.95;
 }
- #entirePage {
-     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
-     border-radius: 35px;
-     background: #F4F4F4FF;
-     height: 80%;
-     width: 70%;
-     padding-top: 20px;
-     padding-bottom: 20px;
-     display: block;
-     margin:0 auto;
+#entirePage {
+   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+   border-radius: 35px;
+   background: #F4F4F4FF;
+   height: 80%;
+   width: 70%;
+   padding-top: 20px;
+   padding-bottom: 20px;
+   display: block;
+   margin:0 auto;
+   animation-name: openSection;
+   animation-duration: 1s;
 }
- #buttons {
-     background: rgba(60, 180, 180);
-     padding-top: 15px;
-     padding-bottom: 15px;
+#buttons {
+   background: rgba(60, 180, 180);
+   padding-top: 15px;
+   padding-bottom: 15px;
 }
- label{
-     font-weight: 600;
+label{
+   font-weight: 600;
 }
- .scrollable{
-     height: 560px;
-     overflow: scroll;
+.scrollable{
+   height: 560px;
+   overflow: scroll;
 }
- .btn{
-     border-radius: 11px;
-     transition-duration: 0.1s;
-     color: #111;
-     background-color: #FFF;
-     border-color: #13673A;
+.btn{
+   border-radius: 11px;
+   transition-duration: 0.1s;
+   color: #111;
+   background-color: #FFF;
+   border-color: #13673A;
 }
- .btn:hover{
-     background-color: #13673A;
-     color: #FFF;
+.btn:hover{
+   background-color: #13673A;
+   color: #FFF;
 }
- .modal{
-     display: none;
-     position: fixed;
-     z-index: 1;
-     left: 0;
-     top: 0;
-     width: 100%;
-     height: 100%;
-     overflow: auto;
-     background-color: rgba(0, 0, 0, 0.5);
-     animation-name: openModalBlock;
-     animation-duration: 1.5s;
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation-name: openModalBlock;
+    animation-duration: 0.4s;
 }
- .modal-content{
-     background-color: #f4f4f4;
-     margin: 20% auto;
-     padding: 20px;
-     width: 40%;
-     height: 13%;
-     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
-     animation-name: openModalBlock;
-     animation-duration: 1.5s;
+.modal-content{
+    border-radius: 20px;
+    background-color: #f4f4f4;
+    margin: 20% auto;
+    padding: 20px;
+    width: 30%;
+    height: auto;
+    text-align: center;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+    animation-name: openModalBlock;
+    animation-duration: 0.7s;
 }
- .closeBtn{
-     color: #fff;
-     float: right;
-     font-size: 35px;
+.closeBtn{
+   color: #fff;
+   float: right;
+   font-size: 35px;
 }
 
 #confirmacion_button_group{
-  text-align: center;
-  width: 100%;
+text-align: center;
+width: 100%;
 }
- #confirmacionSi{
-     max-width: inherit;
-     width: inherit;
+#confirmacionSi{
+   max-width: inherit;
+   width: inherit;
 }
- #confirmacionNo{
-     max-width: inherit;
-     width: inherit;
+#confirmacionNo{
+   max-width: inherit;
+   width: inherit;
 }
- #section_one{
-     display: block;
-     animation-name: openSection;
-     animation-duration: 1.5s;
+#section_one{
+    display: block;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
- #section_two{
-     display: none;
-     animation-name: openSection;
-     animation-duration: 1.5s;
+#section_two{
+    display: none;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
- #section_three{
-     display: none;
-     animation-name: openSection;
-     animation-duration: 1.5s;
+#section_three{
+    display: none;
+    animation-name: openSection;
+    animation-duration: 1s;
 }
- #formExt{
-     display: none;
+
+#infoGeo{
+  display: none;
 }
- @keyframes openSection{
-     from{
-        opacity: 0
-    }
-     to {
-        opacity: 1
-    }
+
+#ok_modal{
+  margin: auto;
+  width: 50%;
 }
- @keyframes openHeader{
-     from{
-        opacity: 0
-    }
-     to {
-        opacity: 0.95
-    }
+
+
+
+
+@keyframes slideHeader{
+    from{
+       opacity: 0;
+      transform: translateY(2rem);
+   }
+    to {
+       opacity: 1;
+      transform: translateY(0);
+   };
+}
+
+
+@keyframes openSection{
+    from{
+       opacity: 0;
+        transform: translateY(2.5rem);
+   }
+    to {
+       opacity: 1;
+        transform: translateY(0);
+   }
+}
+
+
+
+@keyframes openModalBlock{
+   from{
+      opacity: 0
+  }
+   to {
+      opacity: 1
+  }
 }
