--- a/views/registrar.html
+++ b/views/registrar.html
@@ -28,16 +28,19 @@
         <div style="height:30px"></div>
         <div id="entirePage">
             <!-- FIRST ROW CONTAINING DROPDOWNS, MATRICULA INPUT AND TABLE -->
+            <div id="section_one">
+
+
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div id="confirm_campus"class="col-4">
                         <label>LA ACTIVIDAD SE REALIZO DENTRO DEL CAMPUS?</label>
                         <div class="btn-group btn-group-toggle" data-toggle="buttons" id="confirmacion_button_group">
                           <label class="btn btn-success btn-sm active" id="confirmacionSi">
-                            <input type="radio" name="confirmacion" value="Si" checked> SI
+                            <input  type="radio" name="confirmacion" value="Si" checked> SI
                           </label>
                           <label class="btn btn-success btn-sm" id="confirmacionNo">
-                            <input type="radio" name="confirmacion" value="No"> NO
+                            <input  type="radio" name="confirmacion" value="No"> NO
                           </label>
                         </div>
                     </div>
@@ -47,7 +50,7 @@
                             <label>SELECCIONE LA SOLICITUD PENDIENTE POR REGISTAR: </label>
                             <select class="form-control" id='folioCB' >
                             <option selected hidden value="0"> SELECCIONE </option>
-                            <option id="clear" hidden value="clear">Ninguna </opction>
+                            <option value="clear">Ninguna </opction>
                         </select>
                         </div>
                     </div>
@@ -56,76 +59,87 @@
                 <div class="row">
                     <div class="col-11 col-md-4">
                         <div class="form-group">
-                            <label>ELIJA EL TIPO DE EVENTO DE INTERES: </label>
-                            <select class="form-control" id="eventoSelector">
-                            <option value="Vinculacion">Vinculacion</option>
-                            <option value="Cultural">Cultural</option>
-                            <option value="Deportiva">Deportiva</option>
-                            <option value="Responsabilidad Social">Responsabilidad Social</option>
-                            <option value="Ci entifica">Cientifica</option>
+                            <label> SELECCIONE EL TIPO DE EVENTO DE INTERES: </label>
+                            <select id="eventoSelector" class="form-control form-control-sm" name="tipo_evento">
+                            <option selected disabled hidden value="0"> SELECCIONE </option>
+                            <option value="1"> Vinculacion </option>
+                            <option value="2"> Cientifica </option>
+                            <option value="3"> Deportiva </option>
+                            <option value="4"> Responsabilidad Social </option>
+                            <option value="5"> Cultural </option>
                         </select>
                         </div>
                         <div class="form-group">
                             <label>SELECCIONE TIPO DE ACTIVIDAD A REALIZAR: </label>
-                            <select class="form-control" id="actividadSelector" disabled="disabled">
+                            <select id="actividadSelector" class="form-control form-control-sm" disabled="disabled" name="tipo_actividad">
+                            <option selected disabled hidden value="0"> SELECCIONE </option>
+                            <option hidden value="1"> Visitas Empresariales </option>
+                            <option hidden value="2"> Viajes de Estudio </option>
+                            <option hidden value="3"> Practicas Academicas </option>
+                            <option hidden value="4"> Congresos </option>
+                            <option hidden value="5"> Conferencias </option>
+                            <option hidden value="6"> Talleres </option>
+                            <option hidden value="7"> Platicas </option>
+                            <option hidden value="8"> Maratones </option>
+                            <option hidden value="9"> Diplomados </option>
+                            <option hidden value="10"> Caminata </option>
+                            <option hidden value="11"> Otro </option>
                         </select>
                         </div>
+
                         <div style="height:5px;"></div>
                         <hr style="height: 10px;">
                         <!-- STATE AND CITY DROPDOWNS -->
-                        <div class="form-group">
-                            <label>SELECCIONE EL ESTADO:</label>
-                            <select class="form-control" id="estadoSelector">
-
-                        </select>
+                        <div id="infoGeo">
+                          <div class="form-group">
+                              <label> ESTADO: </label>
+                              <br>
+                              <input type="text" class="form-control" id="estado_show"></input>
+                          </div>
+                          <div class="form-group">
+                              <label> CIUDAD: </label>
+                              <br>
+                              <input type="text" class="form-control" id="ciudad_show"></input>
+                          </div>
+                          <div style="height:5px;"></div>
+                          <hr style="height: 10px;">
                         </div>
-                        <div class="form-group">
-                            <label>SELECCIONE LA CIUDAD: </label>
-                            <select class="form-control" disabled="disabled" id="ciudadSelector">
 
-                        </select>
-                        </div>
-                        <div style="height:5px;"></div>
-                        <hr style="height: 10px;">
                         <div class="form-group">
                             <label>FECHA INICIAL DEL EVENTO: </label>
                             <input type="date" class="form-control" name="fecha" id=fecha>
                         </div>
                         <div class="form-group">
-                            <label>HORA INICIAL DEL EVENTO: </label>
-                            <select class="form-control" id="hora">
-
-                        </select>
+                            <label>HORA INICIAL DEL EVENTO: </label> <br>
+                            <input type="time" class="form-control" id="hora">
                         </div>
                     </div>
                     <!-- End of left column -->
-                    <!--    <div class="col-md-1">
 
-        </div> -->
                     <div class="col"> </div>
                     <div class="col-11 col-md-7">
                         <div class="form-group">
                             <label>INGRESAR MATRICULA DE LOS INTEGRANTES QUE ASISTIRAN:</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <input id="ingresar_matricula" type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-dark" type="button">Ingresar</button>
+                                    <button id="boton_ingresar_matricula"class="btn btn-dark" type="button">Ingresar</button>
                                 </div>
                             </div>
                         </div>
 
                         <br>
                         <div class="scrollable">
-                            <table class="table table-bordered" id="mostrarMatriculas">
+                            <table class="table table-bordered">
                                 <thead>
                                     <tr>
-                                        <td>matricula</td>
-                                        <td>nombre</td>
-                                        <td>carrera</td>
-                                        <td>grupo</td>
+                                        <td>Matricula</td>
+                                        <td>Nombre</td>
+                                        <td>Carrera</td>
+                                        <td>Grupo</td>
                                     </tr>
                                 </thead>
-                                <tbody id="matriculasTbody">
+                                <tbody>
 
                                 </tbody>
 
@@ -145,31 +159,31 @@
             <!-- LUGAR DEL EVENTO -->
             <div class="container">
                 <div class="row">
-                    <div class="col-11">
+                    <div class="col-12">
                         <div class="form-group">
                             <label>LUGAR DEL EVENTO</label>
-                            <input type="text" class="form-control" id="lugarEvento" placeholder="ej. CECUT">
+                            <input type="text" class="form-control" id="lugar_evento" name="lugar_evento" placeholder="ej. CECUT">
                         </div>
                         <br>
                         <div class="text-center">
-                            <button class="btn btn-primary btn-lg">SIGUIENTE</button>
+                            <button type="button" id="nextBtn_one" class="btn btn-success btn-lg">SIGUIENTE</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- FIN LIGAR DEL EVENTO -->
 
-            <hr>
-            <br>
-            <br>
+            <!-- FIN LIGAR DEL EVENTO -->
+            </div> <!-- section one -->
 
             <!-- DATOS DE LA ACTIVIDAD -->
-            <div class="container">
+
+            <div class="container" id="section_two">
+              <div class="text-center"><button type="button" id="previousBtn_one" class="btn btn-success btn-lg">ANTERIOR</button></div> <br>
                 <div class="row justify-content-center">
                     <div class="col-8 col-md-7">
                         <div class="form-group">
                             <label for="nombreActividad">Nombre de la actividad:</label>
-                            <input type="text" class="form-control" id="nombreActividad">
+                            <input type="text" class="form-control" id="nombreActividad" name="nombreActividad">
                         </div>
                     </div>
                 </div>
@@ -177,23 +191,21 @@
                     <div class="col-8 col-md-7">
                         <div class="form-group">
                             <label for="nombreOrganiza">Nombre de quien organiza:</label>
-                            <input type="text" class="form-control" id="nombreOrganiza">
+                            <input type="text" class="form-control" id="nombreOrganiza" name="nombreOrganiza">
                         </div>
                         <br>
                         <div class="text-center">
-                            <button class="btn btn-primary btn-lg">SIGUIENTE</button>
+                            <button type="button" id="nextBtn_two" class="btn btn-success btn-lg">SIGUIENTE</button>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- FIN DATOS DE LA ACTIVIDAD -->
 
-            <hr>
-            <br>
-            <br>
 
             <!-- JUSTIFICACION DEL EVENTO -->
-            <div class="container">
+            <div class="container" id="section_three">
+              <div class="text-center"><button type="button" id="previousBtn_two" class="btn btn-success btn-lg">ANTERIOR</button></div> <br>
                 <div class="row justify-content-center">
                     <div class="col-8 col-md-7">
                         <div class="form-group">
@@ -236,7 +248,7 @@
                 </div>
                 <hr>
                 <div class="text-center">
-                    <button class="btn btn-primary btn-lg">SOLICITAR PERMISO</button>
+                    <button id="registrarActividad" class="btn btn-primary btn-lg">REGISTRAR ACTIVIDAD</button>
                 </div>
             </div>
             <!-- FIN JUSTIFICACION DEL EVENTO -->
@@ -247,6 +259,7 @@
     <div id="warningModal" class="modal">
         <div class="modal-content">
             <h2>Favor de llenar todos los campos.</h2>
+            <input id="ok_modal"  class="btn btn-success btn-lg" type="button" name="ok_modal" value="Ok">
         </div>
     </div>
 
