--- a/ModuloCoordinador/views/menu_consultas.html
+++ b/ModuloCoordinador/views/menu_consultas.html
@@ -28,7 +28,6 @@
 
       </div> <!-- Entire Page -->
     </div>
-
     <!-- BOTONES ACTIVIDAD -->
     <div class="row justify-content-center">
       <div class="col-md-2 col-sm-2">
@@ -44,17 +43,18 @@
           <label> PERIODO </label>  &nbsp;&nbsp;
           <select class="form-control-sm" name="semestre">
             <option selected value="0"> 2018-2 </option>
-          </select >  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <label> Tipo de evento </label>
+          </select >  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <label> Tipo de evento </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <input type="text" class="form-control" style="width:20%" id="search" placeholder="Buscar...">
 
 
       </div>
     </div>
 
         <div class="row justify-content-center">
-            <div >
+            <div style="overflow-y:scroll; height:350px;">
                 <table class="table table-bordere" id="Alumnos" >
-                  <thead id="header-table"  style="  display: block; ">
+                  <thead id="header-table"  style=" ">
                       <tr>
                           <th>#</th>
                           <th>CARRERA</th>
@@ -67,7 +67,7 @@
                           <th>CULTURAL</th>
                       </tr>
                   </thead>
-                  <tbody style=" display: block; ; overflow-y:auto; width: 700px;height: 300px;">
+                  <tbody style=" ">
                     <!-- Cargar Folios - AJAX -->
 
                     <!-- Cargar Folios - AJAX -->
@@ -81,6 +81,22 @@
     <!-- FIN TABLA ACTIVIDADES -->
     <script src="../../assets/bootstrap/bootstrap.min.js"></script>
     <script src="../js/menu_consulta.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
+     // Write on keyup event of keyword input element
+     $(document).ready(function(){
+     $("#search").keyup(function(){
+     _this = this;
+     // Show only matching TR, hide rest of them
+     $.each($("#Alumnos tbody tr"), function() {
+     if($(this).text().toLowerCase().indexOf($(_this).val().toLowerCase()) === -1)
+     $(this).hide();
+     else
+     $(this).show();
+     });
+     });
+    });
+    </script>
 </body>
 
 </html>
