--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -22,7 +22,10 @@
 		padding-bottom: 20px;
 		display: block;
 		margin: auto;
-		
+		position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
