--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -49,7 +49,7 @@
                             <!-- FORMS - TERRITORIO NACIONAL/EXTRANJERO -->
 
                             <div id="formNac" class="form-group">
-                                <label> SELECCIONE EL ESTADO: </label>
+                                <label> SELECCIONE EL ESTADOO: </label>
                                 <select class="form-control form-control-sm" name="estado" id="nac_estado">
                               <option selected disabled hidden value="0"> SELECCIONE </option>
                               <option value="DIF">Distrito Federal</option>
