--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -408,7 +408,7 @@
                                             <td>Grupo</td>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="datos_tbody">
                                         <!-- Cargar Matriculas - AJAX -->
 
                                         <!-- Cargar Matriculas - AJAX -->
