Queries funcionando para despliegues de solicitudes y registros, ademas, se hizo un cambio al query de insercion de la solicitud a incluir verificador de solicitacion previa y de estado de solicitud (default: pendiente)

--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -11,7 +11,7 @@
 </head>
 
 
-<body  onload="ConsultaDeRegistros()">
+<body  onload="ConsultaDeActividades()">
     <br>
     <!-- HEADER -->
     <div id="Header">
