agregado de diseno comentarios de administrador,arreglos subdirector

--- a/ModuloSubdirector/views/menu_subdirector.html
+++ b/ModuloSubdirector/views/menu_subdirector.html
@@ -22,62 +22,6 @@
     <!-- FIN HEADER -->
     <br>
 
-    <div id="comentarioAceptar" class="modal">
-      <div id="entireAceptar" class="col-md-6 col-lg-10">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
-            </div>
-            <div class="col-md-9">
-              <h1>Aceptar solicitud</h1>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-11">
-              <label class="preview_label">Comentario</label><br>
-              <textarea name="comentario" rows="8" cols="80"></textarea>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3">
-              <input type="button" name="boton" class="botonsm boton-add" value=" " >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="comentarioDenegar" class="modal">
-      <div id="entireDenegar" class="col-md-6 col-lg-10">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-1">
-              <input type="button" name="" class="boton-regresar" id="regresar">
-            </div>
-            <div class="col-md-9">
-              <h1>Rechazar solicitud</h1>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-11">
-              <label class="preview_label">Comentario</label><br>
-              <textarea name="comentario" rows="8" cols="80"></textarea>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3">
-              <input type="button" name="boton" class="botonsm boton-add" value=" " >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="comentarioRechazar" class="modal">
-
-    </div>
-
     <div id="solicitudPopup" class="modal">
       <div id="entirePopup" class="col-md-6 col-lg-10">
         <div class="container">
@@ -148,10 +92,6 @@
     <div class="row justify-content-center">
       <div class="col-md-3 col-sm-3">
         <input type="button" name="" class="boton" value="Consultar actividades registradas" id="actividadRegistradas">
-      </div>
-      <div class="col-md-3 col-sm-3">
-        <input type="button" name="" class="boton" value="Alumnos" id="alumnos">
-      </div>
       </div>
     </div>
 
@@ -226,7 +166,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-2 col-sm-2">
-            <form class="" action="../control/logoutAdmin.php">
+            <form class="" action="../control/logoutCoo.php">
             <input type="submit" name="" class="boton" value="Salir">
             </form>
           </div>
